--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ crossorigin="anonymous">
 <main>
 <section id= "about" class="container d-none d-md-block">
   <p class="p-5 text-center font-weight-bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis ante <br> nulla. Donec in neque consectetur, ultrices justo eu, hendrerit lectus.</p>
+  <div class="borde">
+  </div>
   <div class="row">
   <div class="col-6 ">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis ante nulla. Donec in neque consectetur, ultrices justo eu, hendrerit lectus. Nullam fermentum turpis et dolor euismod consequat sed sed ante. Curabitur vel lacinia nisi. Sed mollis condimentum rhoncus. Proin sed diam eu risus auctor aliquet. Sed nisi lorem, mollis sit amet gravida in, finibus ut diam. Nunc cursus lacus ex, id interdum nibh tristique ac. Maecenas in mi blandit, euismod ipsum eu, lobortis nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris ultricies sem eu massa pellentesque, id interdum nibh luctus. Nam ac orci id neque posuere aliquam.</p>
@@ -63,6 +65,8 @@ crossorigin="anonymous">
 </section>
 <section class="container p-5 text-center" id= "experience">
     <h3 class="display-4 font-weight-bold"> MI EXPERIENCIA</h3>
+    <div class="borde">
+    </div>
     <div class="row pt-5">
     <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center">
     <i class="far icono fa-newspaper fa-4x"></i>
@@ -78,8 +82,9 @@ crossorigin="anonymous">
   </section>
 <section id= "work"class="container-fluid imageWorks pt-5">
   <h3 class="display-4 text-center text-white font-weight-bold">MIS ÚLTIMOS TRABAJOS</h3>
-  <div class="row p-5">
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-5">
+  <div class="borde1"></div>
+<div class="row p-5">
+<div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-5">
     <div class="card">
     <img src="./assets/img/meet_coffee.png" class="card-img-top" alt="Cuppon">
    <div class="card-body">
@@ -136,7 +141,8 @@ crossorigin="anonymous">
 </div>
 </section>
 <section id= "contact">
-  <h3 class="text-center contacto font-weight-bold p-5 display-3">CONTACTO</h3>
+  <h3 class="text-center contacto font-weight-bold p-5 display-3 media">CONTACTO</h3>
+  <div class="borde"></div>
   <p class="text-center font-weight-light">¿Quieres conocer más de mí?</p>
 <div class="typeform-widget" data-url="https://form.typeform.com/to/ARawSk6n" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 </div>
